--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=4000
-API_SENDGRID=
+EMAIL_USER=obaidnabi1991@gmail.com
+EMAIL_PASSWORD="sjmpimijrxayfudr"
+RECIPIENT_EMAIL=loneobaid06@gmail.com
